# AI-project

./: .gitignore  .qmake.stash  GomokuClient.pro  GomokuClient_resource.rc  Makefile.Debug  Makefile.Release  README.md  SERVER_COMPLETION_REPORT.md  SERVER_RELEASE_REPORT.md  env.md  object_script.GomokuClient.Debug  object_script.GomokuClient.Release  网络联机五子棋开发文档.md
server/: CMakeLists.txt  monitor_issues.sh  test_connection.py  test_network.sh
server/config/: server.conf
server/docs/: API.md  ARCHITECTURE_REPORT.md  BUILD.md  CODE_QUALITY_REPORT.md  DEPLOYMENT_GUIDE.md  TEST_REPORT.md  TOKEN_AUTH.md
server/include/business/: ChatManager.h  GameController.h  MatchManager.h  RoomManager.h  SpectatorManager.h  UserManager.h
server/include/network/: Acceptor.h  Buffer.h  Channel.h  EventLoop.h  Poller.h  Socket.h  TcpConnection.h
server/include/protocol/: MessageDispatcher.h  ProtobufCodec.h
server/include/server/: GameServer.h
server/include/storage/: MySQLClient.h  RedisClient.h
server/include/utils/: Logger.h  ThreadPool.h
server/scripts/: run_tests.sh  self_check.sh  test_server.sh
server/sql/: init_database.sql
server/src/: main.cpp  main_simple.cpp
server/src/business/: ChatManager.cpp  GameController.cpp  MatchManager.cpp  RoomManager.cpp  SpectatorManager.cpp  UserManager.cpp
server/src/network/: Acceptor.cpp  Buffer.cpp  Channel.cpp  EventLoop.cpp  Poller.cpp  Socket.cpp  TcpConnection.cpp
server/src/protocol/: MessageDispatcher.cpp  ProtobufCodec.cpp
server/src/server/: GameServer.cpp
server/src/storage/: MySQLClient.cpp  RedisClient.cpp
server/src/utils/: Logger.cpp  ThreadPool.cpp
server/tests/: CMakeLists.txt  README.md  test_framework.h  test_main.cpp
server/tests/integration/: test_integration.cpp
server/tests/unit/: test_buffer.cpp  test_game_controller.cpp
shared/proto/: compile.sh  gomoku.proto
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  styles.qss
src/data/: roominfo.cpp  roominfo.h  userprofile.cpp  userprofile.h
src/logic/: aiengine.cpp  aiengine.h  gamecontroller.cpp  gamecontroller.h
src/network/: messagedispatcher.cpp  messagedispatcher.h  protobufcodec.cpp  protobufcodec.h  tcpclient.cpp  tcpclient.h  windowssocket.cpp  windowssocket.h
src/ui/: boardwidget.cpp  boardwidget.h  logindialog.cpp  logindialog.h  logindialog.ui  offlinegamedialog.cpp  offlinegamedialog.h  offlinegamedialog.ui  titlebar.cpp  titlebar.h
